2026-09-13 재검증 패치 반영: 인코딩 선택 기준과 inputReader 한계, SIGKILL 뒤 waitFor 확인, 후손 파이프 대기 조건, fork의 async-signal-safe 제약, jspawnhelper 갱신 문단 복원, 구버전 glibc의 vfork 경로 정정
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>