@@ -1,6 +1,7 @@
 # java-external-process.adoc 사실 관계 검증
 
-- 검증일: 2026-09-06 (Asia/Seoul)
+- 최초 검증일: 2026-09-06 (Asia/Seoul)
+- 추가 검증일: 2026-09-13 (Asia/Seoul). 아래 1~6절은 최초 검증 당시의 기록이며, 현재 원고에 대한 재검증 결과와 패치 상태는 7절에 기록했다.
 - 대상: [src/content/java-external-process.adoc](../../src/content/java-external-process.adoc)
 - 범위: 본문의 JDK API, 라이브러리 동작과 릴리스, Linux/glibc 구현, 예제 실행 결과, 벤치마크 해석, 운영상 결론.
 - 방법: 공식 API 문서, OpenJDK 이슈와 소스, Maven Central 배포물, 라이브러리 소스, Linux 소스를 대조하고 로컬에서 재현했다. 웹으로 읽히지 않은 OpenJDK 이슈는 공개 REST API `/rest/api/2/issue/JDK-번호`로 조회했다.
@@ -220,3 +221,62 @@ java -Xms8g -Xmx8g -XX:+AlwaysPreTouch -Djdk.lang.Process.launchMechanism=FORK e
 - 호스트의 `vm.overcommit_memory`는 변경하지 않았으며, 모드 2의 실패는 공식 문서와 커널 코드로 검증했다.
 - JDK 27은 소스와 변경 기록으로 확인했고 JDK 27 바이너리로 실행하지는 않았다.
 - 참고 자료에 남긴 2000년의 글은 현재 API나 구현의 근거로 사용하지 않았다. 이번 기술 판정은 위의 일차 자료에 근거한다.
+
+## 7. 2026-09-13 재검증
+
+검토 기준 커밋은 `42e16fee393ca22ae6b7558d24f310ac89798e22`이다. 이전 검증 이후 편집된 본문 전체를 다시 읽고, 공식 문서와 버전이 고정된 소스, 배포 JAR, 로컬 실행으로 대조했다. **우선 수정할 사항 4건과 표현을 보완할 사항 2건**을 확인했다. 기본 POSIX_SPAWN 유지, 출력 소비와 입력 EOF 처리, 시간제한과 종료 정책을 함께 설계한다는 핵심 결론은 타당하다.
+
+### 확인한 문제와 수정 방향
+
+행 번호는 검토 기준 커밋의 본문을 가리킨다. 아래 6건은 같은 날 패치를 검토한 뒤 본문에 모두 적용했다. 적용 과정과 패치 원안에서 달라진 문장은 아래 “패치 검토와 적용 결과”에 있다.
+
+| 위치 | 판정 | 검증 결과와 수정 방향 |
+|---|---|---|
+| 777~779행, 구버전 glibc | **오류** | glibc 2.4~2.23에서도 JDK 13의 `posix_spawn()` 호출 조건은 내부 `vfork()` 경로를 선택한다. “glibc 2.24 미만에서는 fork를 썼으므로 VFORK를 명시할 이유가 있었다”는 근거를 바로잡는다. |
+| 632행, fork 비교 표 | **오류** | 멀티스레드 프로그램에서 fork한 자식은 execve까지 async-signal-safe 함수만 안전하게 호출할 수 있다. 준비 작업을 “제약 없이” 할 수 있다는 표현을 고치고 잠금 상태 상속의 제약을 설명한다. |
+| 167행, 문자 인코딩 | **과도한 일반화** | JDK 18 이후 UTF-8 기본값은 `-Dfile.encoding=COMPAT`으로 변경할 수 있다. `inputReader()`는 자식의 인코딩을 감지하지 않으므로 항상 더 정확하지는 않다. 출력 인코딩을 알면 Charset을 명시하도록 설명한다. |
+| 689행 및 715~717행, helper 운영 설명 | **논리 연결 누락** | 뒤에서 설명한다고 예고한 JDK 갱신 시 helper 버전 불일치 내용이 현재 본문에는 없다. 별도 실행 파일의 교체 문제와 VFORK의 안전성 문제를 구분하고, JDK 경로 보존·갱신·JVM 재시작을 설명한 뒤 FORK 임시 우회로 연결한다. |
+| 379행, 후손의 출력 파이프 | **표현 보완** | 후손이 파이프를 열고 있어도 JDK의 직접 자식 종료 처리와 진행 중인 읽기의 순서에 따라 EOF 도달 여부가 달라진다. join이 반드시 끝나지 않는다고 단정하지 않고 지연 가능성으로 표현한다. |
+| 334행, SIGKILL | **표현 보완** | 핸들러를 통한 마무리 기회가 없다는 설명은 맞다. 다만 `destroyForcibly()` 반환이 종료 완료를 보장하지 않으므로 필요하면 `waitFor()`로 확인한다는 점을 명시한다. |
+
+주요 근거: [JDK 13 ProcessImpl_md.c](https://github.com/openjdk/jdk/blob/jdk-13%2B33/src/java.base/unix/native/libjava/ProcessImpl_md.c), [fork(2)](https://man7.org/linux/man-pages/man2/fork.2.html), [JEP 400](https://openjdk.org/jeps/400), [Process API](https://docs.oracle.com/en/java/javase/25/docs/api/java.base/java/lang/Process.html), [JDK 25 ProcessImpl.java](https://github.com/openjdk/jdk/blob/jdk-25%2B36/src/java.base/unix/classes/java/lang/ProcessImpl.java). 항목별 설명과 수정 제안은 [당일 상세 검증 기록](java-external-process-2026-09-13.md)에 있다.
+
+### 실행 결과와 재확인 범위
+
+이번 환경은 Ubuntu **24.04.5** LTS, Linux `6.17.0-1032-oem`, glibc 2.39, Temurin `25+36-LTS`였다. 최초 검증의 Ubuntu 24.04.4 환경과 구분한다.
+
+- `DeadlockDemo`, `MergedReadDemo`, `StdinEofDemo`, `PlainJdkRunner`, `ProcessRunner`, `ZtExecRunner`, `CommonsExecRunner`, `CommandLineQuotingDemo`, `RedirectDemo`의 **9개 프로그램이 정상 종료**했다. 본문에 실린 출력은 PID를 제외하고 일치했다.
+- `SequentialReadDemo`는 3초 뒤에도 `reading stdout...` 상태였다. 검증용 프로세스 그룹을 종료해 정리했다.
+- `LC_ALL=C`에서 Python 자식이 UTF-8 바이트 `C3 A9`를 출력하게 했다. 기본 `inputReader()`는 U+FFFD 두 개를 반환하고, UTF-8을 명시하면 U+00E9를 반환했다. 같은 환경의 `-Dfile.encoding=COMPAT` 실행에서는 기본 문자 집합이 UTF-8에서 US-ASCII로 바뀌었다.
+- 직접 자식이 종료하고 후손이 출력 파이프를 열고 있는 상황에서, 읽기를 미리 시작하지 않은 경우에는 EOF에 도달했다. 가상 스레드에서 읽기를 먼저 시작한 경우에는 직접 자식 종료 후에도 pump가 300ms의 join 대기를 넘겼다. 후손을 종료한 뒤 pump 종료까지 확인했다.
+- Maven Central 최신 버전과 릴리스 날짜는 zt-exec 1.13.0, Commons Exec 1.6.0으로 본문과 일치했다. 배포 sources JAR에서 출력·종료 코드 기본값, 입력 미지정 시 stdin 닫기, 기본 destroy 사용을 재확인했다.
+- JDK 25의 기본 POSIX_SPAWN 및 VFORK 경고, JDK 27의 VFORK 제거 반영 상태, Linux 6.17의 overcommit 모드 0 판정과 mmap_lock 사용도 소스·변경 기록으로 재확인했다.
+
+벤치마크 과거 수치, 과거 서버의 장애 원인, helper 교체 실험, strace, SIGTERM 무시·정상 종료의 라이브러리 경계 조건, JDK 27 바이너리 실행은 이번에 재현하지 않았다. 이전 검증 기록과 이번에 직접 확인한 범위를 구분한다.
+
+### 패치 검토와 적용 결과
+
+위 6건을 반영한 [java-external-process-2026-09-13.patch](java-external-process-2026-09-13.patch)를 생성했다. 패치 대상은 `src/content/java-external-process.adoc` 한 파일이다. 생성 시점에는 `git apply --check --whitespace=error-all`이 성공했고, 임시 복사본에 적용한 결과가 의도한 수정문과 바이트 단위로 일치했다.
+
+같은 날 패치의 8개 hunk를 항목별로 다시 검토한 뒤 `git apply`로 본문에 적용했다. 패치 파일은 검토 기록으로 남긴다. 검토 결과는 다음과 같다.
+
+| hunk | 판정 | 검토 내용 |
+|---|---|---|
+| 167행, 인코딩 두 문단 | **채택** | JEP 400의 `COMPAT` 설명과 `Process.inputReader(Charset)`의 존재를 확인했다. |
+| 334행, SIGKILL과 `waitFor()` | **채택** | `destroyForcibly()` API Note의 “isAlive()가 잠시 true일 수 있다”는 설명과 일치한다. |
+| 379행, 후손의 파이프와 `join()` | **채택·표현 조정** | `ProcessPipeInputStream.processExited()`의 동작과 위 재현 결과에 부합한다. “JDK 25는 출력 스트림을 정리하지만”이 무엇을 하는지 드러나지 않아 “파이프에 남은 출력을 회수하고 스트림을 닫지만”으로 풀었다. |
+| 632행, fork 표의 장점 칸 | **채택** | 주소 공간 분리를 장점으로 적고 “제약 없이”를 뺐다. |
+| 표 뒤, async-signal-safe 문단 | **채택** | fork(2) 매뉴얼의 멀티스레드 제약과 일치한다. 표 바로 뒤에 두어 장점 칸의 한계를 바로 설명한다. |
+| 689행, 앞 참조 문장 삭제 | **채택** | helper 버전 불일치와 VFORK 제거를 한 문장에 묶은 인과를 없앴다. 두 주제는 아래 helper 문단과 VFORK 절에서 따로 설명한다. |
+| 715행 뒤, helper 갱신 문단 | **채택·표현 조정** | 원안의 첫 문장 “별도 실행 파일인 jspawnhelper는 JDK 갱신 때도 함께 관리해야 합니다”는 문제의 원인이 드러나지 않아 “별도 실행 파일이라는 점은 JDK를 갱신할 때 문제가 됩니다”로 바꿨다. JDK-8325621 설명은 “불일치를 다룹니다”에서 “자동 업데이트로 생긴 불일치를 배경으로 helper의 버전 검사를 보강했습니다”로 구체화했다. 3절의 기존 확인 내용과 일치한다. |
+| 777행, 구버전 glibc | **채택·표현 조정** | JDK 13+33 소스에서 `posix_spawn(&resultPid, helperpath, 0, 0, ...)` 호출과 상단 주석의 “Due to the way the JDK calls posix_spawn(3), it would therefore call vfork(2)”를 직접 확인했다. 원안의 “다만 glibc 2.24 미만이라는 이유만으로”는 바로 앞 문장이 glibc를 언급하지 않아 이어지지 않으므로 “당시의 오래된 glibc를 이유로 지정할 필요도 없었습니다”로 시작하고, glibc 2.4~2.23이 호출 인자에 따라 `fork()`와 `vfork()` 중 하나를 고른다는 조건을 덧붙였다. “앞 절에서 본”은 해당 설명이 두 절 앞에 있으므로 “앞에서 본”으로 고쳤다. |
+
+마크업은 두 곳을 손봤다. 원안의 `` `-Dfile.encoding=COMPAT`을 ``과 `` `native.encoding`과 ``는 단일 백틱 바로 뒤에 조사가 붙어 렌더링이 깨지므로 이중 백틱으로 바꿨다. 블로그 관례에 맞춰 새로 넣은 두 문단은 문장 단위로 줄을 나눴다.
+
+적용 후 검증 결과는 다음과 같다.
+
+- `git apply`: 성공. 적용 대상은 본문 한 파일이며 예제 코드와 사이트 설정은 바꾸지 않았다.
+- `git diff --check`: 성공.
+- `./gradlew bake`: **성공**. 최초 검증 때와 같은 JRuby의 `--add-opens` 경고만 나왔다.
+- 생성된 `output/java-external-process.html`에서 수정한 여덟 문단을 찾아 백틱이나 별표가 노출되지 않았음을 확인했다.
+- 이번 적용에서 새 실행 실험은 하지 않았다. JDK 13 소스 확인은 GitHub의 `jdk-13+33` 태그 파일을 내려받아 대조했다.
